--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -220,7 +220,7 @@ const firebaseConfig = {
   apiKey: "AIzaSyCkR-AyJK2vFnz0V2HTuz2b3zCaLMxbXtI",
   authDomain: "test-gt7.firebaseapp.com",
   projectId: "test-gt7",
-  storageBucket: "test-gt7.appspot.com",
+  storageBucket: "test-gt7.firebasestorage.app",
   messagingSenderId: "928154989107",
   appId: "1:928154989107:web:20a34d0009fa75bd1ee946",
   measurementId: "G-1SG8DW1KQ9"
